--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
 	{% endblock %}
 
 	{% block corejs %}
+    <script src="https://kit.fontawesome.com/dd3556f1ca.js" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
 		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
 	</script>
