--- a/static/css/base.css
+++ b/static/css/base.css
@@ -37,6 +37,17 @@ body {
     background: black;
     color: white;
 }
+.btn-outline-black {
+    background: #fff;
+    color: #000 !important;
+    border: 1px solid #000;
+}
+.btn-outline-black:hover,
+.btn-outline-black:active,
+.btn-outline-black:focus {
+    background: #000;
+    color:#fff !important;
+}
 
 .shop-now-button:hover,
 .shop-now-button:active,
